Fixed mini buttons on mobile

--- a/src/styles/partials/_finder.scss
+++ b/src/styles/partials/_finder.scss
@@ -365,7 +365,7 @@
 
             .info-button i,
             .add-button i {
-                font-size: 3.6rem;
+                font-size: 3.2rem;
             }
         }
     }
