--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -706,7 +706,7 @@ body {
       margin: 0 auto; }
     .search-results .beer-item .info-button i,
     .search-results .beer-item .add-button i {
-      font-size: 3.6rem; }
+      font-size: 3.2rem; }
   .search-form button {
     font-size: 3rem;
     font-family: "neontubes";
